--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,23 @@
     "version": "1.1",
     "manifest_version": 3,
     "action": {
-      "default_popup": "hello.html",
-      "default_icon": "icon.png"
+        "default_popup": "hello.html",
+        "default_icon": "images/icon-32.png"
+    },
+    "content_scripts": [
+        {
+            "js": [
+                "scripts/content.js"
+            ],
+            "matches": [
+                "https://*/*"
+            ]
+        }
+    ],
+    "icons": {
+        "16": "images/icon-16.png",
+        "32": "images/icon-32.png",
+        "48": "images/icon-48.png",
+        "128": "images/icon-128.png"
     }
-  }
+}
